k8s/ingress/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress-admin-ui
  namespace: ecommerce
  labels:
    app: shopnow
  annotations:
    traefik.ingress.kubernetes.io/proxy-body-size: "20m"
    traefik.ingress.kubernetes.io/proxy-read-timeout: "120"
    traefik.ingress.kubernetes.io/proxy-send-timeout: "120"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Reference to cert-manager issuer for TLS
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - shopnow.johnisah.com
      secretName: shopnow-tls    # Shared with ingress.yaml — one cert per host, not per path
  rules:
    - host: shopnow.johnisah.com
      http:
        paths:
          - path: /admin-panel
            pathType: Prefix
            backend:
              service:
                name: admin-ui
                port:
                  number: 3001
